fix: quicksettingspanel overflow issue in mobile

--- a/app/component/quickSettingsPanel.scss
+++ b/app/component/quickSettingsPanel.scss
@@ -148,6 +148,7 @@
     }
     &.arrive,
     &.select-route-modes {
+      margin-right: 7px;
       width: 100%;
     }
   }
